--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,12 @@
+<a href="/">home</a>
+
 <h1>{{message}}</h1>
 <p>Welcome to {{title}}</p>
 
 <h3>Confirm Identity</h3>
 <form class="" action="/users/signin" method="post">
-  <input type="text" name="agentId" value="" placeholder="Agent Code Name">
-  <input type="text" name="password" value="" placeholder="Password">
+  <input type="text" name="agentName" value="xlarkle" placeholder="Agent Code Name">
+  <input type="text" name="password" value="value2" placeholder="Password">
   <input type="submit" name="" value="Submit">
 </form>
 
